--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
     "name": "PurgatorioEnemies",
-    "version_number": "1.0.1",
+    "version_number": "1.2.0",
     "website_url": "https://github.com/DoodleEh/PurgSpawnArm",
     "description": "Adds enemies and bosses from Project Purgatorio to the Spawner Arm.",
     "dependencies": [
         "BepInEx-BepInExPack-5.4.2100",
-        "Hydraxous-Carcass-1.1.0"
+        "Hydraxous-Carcass-1.1.0",
+	"EternalsTeam-PluginConfigurator-1.10.2"
     ]
 }
