--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "PurgatorioEnemies",
     "version_number": "1.2.0",
     "website_url": "https://github.com/DoodleEh/PurgSpawnArm",
-    "description": "Adds enemies and bosses from Project Purgatorio to the Spawner Arm.",
+    "description": "Adds enemies and bosses from Project Purgatorio to the Spawner Arm and The Cyber Grind. Configurable.",
     "dependencies": [
         "BepInEx-BepInExPack-5.4.2100",
         "Hydraxous-Carcass-1.1.0",
